objects/CampaignMember.object
<CustomObject>
    <sharingModel>ControlledByCampaign</sharingModel>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_ID_KD__c</fullName>
        <formula>Campaign.Campaign_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign ID (KD)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_Email_Body_Campaign__c</fullName>
        <label>[T]Email Body Campaign</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>T_Subject_Line_Campaign__c</fullName>
        <formula>Campaign.Subject_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]Subject Line Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_User_is_Api_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[T]Running User is Api User</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>DontAddMembersForClosedCampaigns</fullName>
        <active>true</active>
        <description>Don&apos;t add members for Closed Campaigns</description>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; 
ISNEW () &amp;&amp;  ISPICKVAL(Campaign.Status ,&quot;Closed&quot;)</errorConditionFormula>
        <errorMessage>Don&apos;t add members for Closed Campaigns</errorMessage>
    </validationRules>
</CustomObject>